--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -34,10 +34,11 @@ jobs:
       uses: gradle/actions/setup-gradle@v3
     
     - name: Add Capacitor
-      run: npx cap add android --web-dir=dist
+      run: npx cap add android
     
     - name: Sync Capacitor
-      run: npx cap sync android
+      run: |
+        npx cap sync android
     
     - name: Build Release APK (unsigned)
       working-directory: android
