--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -35,11 +35,16 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
     
-    - name: Add Capacitor
-      run: npx cap add android
-    
-    - name: Sync Capacitor
-      run: npx cap sync android
+    - name: Add or Sync Capacitor
+      run: |
+        if [ -d "android" ]; then
+          echo "Android platform already exists, syncing..."
+          npx cap sync android
+        else
+          echo "Adding Android platform..."
+          npx cap add android
+          npx cap sync android
+        fi
     
     - name: Build APK Debug
       working-directory: android
