--- a/.github/workflows/release-apk.yml
+++ b/.github/workflows/release-apk.yml
@@ -33,12 +33,16 @@ jobs:
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
     
-    - name: Add Capacitor
-      run: npx cap add android
-    
-    - name: Sync Capacitor
+    - name: Add or Sync Capacitor
       run: |
-        npx cap sync android
+        if [ -d "android" ]; then
+          echo "Android platform already exists, syncing..."
+          npx cap sync android
+        else
+          echo "Adding Android platform..."
+          npx cap add android
+          npx cap sync android
+        fi
     
     - name: Build Release APK (unsigned)
       working-directory: android
