--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -53,10 +53,16 @@ jobs:
         ./gradlew assembleDebug
       continue-on-error: true
     
+    - name: Find APK files
+      run: |
+        echo "=== APK files found ==="
+        find android -type f -name "*.apk" -exec ls -lh {} \;
+      continue-on-error: true
+    
     - name: Upload artifact
       uses: actions/upload-artifact@v4
       with:
-        name: app-debug-apk
-        path: android/app/build/outputs/apk/debug/app-debug.apk
+        name: apk-debug
+        path: android/app/build/outputs/apk/
         retention-days: 7
       continue-on-error: true
