--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,4 +1,4 @@
-name: Build APK (Continuous)
+name: Build Android APK
 
 on:
   push:
@@ -6,19 +6,24 @@ on:
   pull_request:
     branches: [ main ]
   workflow_dispatch:
+  release:
+    types: [ created, published ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    name: Build APK
     
     steps:
-    - uses: actions/checkout@v4
+    - name: Checkout code
+      uses: actions/checkout@v4
     
     - name: Set up JDK 17
-      uses: actions/setup-java@v3
+      uses: actions/setup-java@v4
       with:
         java-version: '17'
         distribution: 'temurin'
+        cache: 'gradle'
     
     - name: Set up Node.js
       uses: actions/setup-node@v4
@@ -27,42 +32,70 @@ jobs:
         cache: 'npm'
     
     - name: Install dependencies
-      run: npm install
+      run: npm ci
     
-    - name: Build web app
+    - name: Build web application
       run: npm run build
+      env:
+        VITE_GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
     
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
     
-    - name: Add or Sync Capacitor
+    - name: Sync Capacitor with Android
       run: |
         if [ -d "android" ]; then
-          echo "Android platform already exists, syncing..."
-          npx cap sync android
+          echo "Android platform exists, syncing..."
+          npx capacitor sync android
         else
           echo "Adding Android platform..."
-          npx cap add android
-          npx cap sync android
+          npx capacitor add android
         fi
     
-    - name: Build APK Debug
+    - name: Build APK (Debug)
       working-directory: android
       run: |
         chmod +x gradlew
-        ./gradlew assembleDebug
-      continue-on-error: true
+        ./gradlew clean assembleDebug --no-daemon
+      continue-on-error: false
     
-    - name: Find APK files
+    - name: List generated APK files
       run: |
-        echo "=== APK files found ==="
+        echo "=== Generated APK Files ==="
         find android -type f -name "*.apk" -exec ls -lh {} \;
       continue-on-error: true
     
-    - name: Upload artifact
+    - name: Upload Debug APK
       uses: actions/upload-artifact@v4
       with:
-        name: apk-debug
-        path: android/app/build/outputs/apk/
-        retention-days: 7
+        name: panaderia-costos-debug
+        path: android/app/build/outputs/apk/debug/
+        retention-days: 30
+        if-no-files-found: warn
+    
+    - name: Build APK (Release) - On Tag
+      if: startsWith(github.ref, 'refs/tags/')
+      working-directory: android
+      run: |
+        chmod +x gradlew
+        ./gradlew clean assembleRelease --no-daemon
       continue-on-error: true
+    
+    - name: Upload Release APK
+      if: startsWith(github.ref, 'refs/tags/')
+      uses: actions/upload-artifact@v4
+      with:
+        name: panaderia-costos-release
+        path: android/app/build/outputs/apk/release/
+        retention-days: 90
+        if-no-files-found: warn
+    
+    - name: Create GitHub Release with APK
+      if: startsWith(github.ref, 'refs/tags/')
+      uses: softprops/action-gh-release@v1
+      with:
+        files: |
+          android/app/build/outputs/apk/release/*.apk
+          android/app/build/outputs/apk/debug/*.apk
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
