--- a/package.json
+++ b/package.json
@@ -1,15 +1,23 @@
 {
   "name": "panaderia-costos-pro",
   "private": true,
-  "version": "1.0.5",
+  "version": "1.0.6",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "cap:add:android": "cap add android",
-    "cap:build:android": "cap build android --release",
-    "cap:sync": "cap sync"
+    "cap": "capacitor",
+    "cap:add": "capacitor add android",
+    "cap:add:android": "capacitor add android",
+    "cap:sync": "capacitor sync android",
+    "cap:build": "capacitor build android --release",
+    "cap:build:android": "capacitor build android --release",
+    "cap:open": "capacitor open android",
+    "cap:run": "capacitor run android --livereload",
+    "android:build": "npm run build && npm run cap:sync && npm run cap:build",
+    "android:debug": "npm run build && npm run cap:sync && cd android && ./gradlew assembleDebug",
+    "android:release": "npm run build && npm run cap:sync && cd android && ./gradlew assembleRelease"
   },
   "dependencies": {
     "react": "^19.2.0",
@@ -18,7 +26,8 @@
     "react-markdown": "^10.1.0",
     "@capacitor/core": "^6.1.0",
     "@capacitor/cli": "^6.1.0",
-    "@capacitor/android": "^6.1.0"
+    "@capacitor/android": "^6.1.0",
+    "@capacitor/app": "^6.0.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
