--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -32,7 +32,9 @@ jobs:
         cache: 'npm'
     
     - name: Install dependencies
-      run: npm ci
+      run: npm install --legacy-peer-deps --prefer-offline --no-audit
+      env:
+        npm_config_optional: false
     
     - name: Build web application
       run: npm run build
