--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -88,6 +88,21 @@ jobs:
         find android -type f -name "*.apk" -exec ls -lh {} \;
       continue-on-error: true
     
+    - name: Verify APK
+      run: |
+        echo "=== Verifying APK ==="
+        APK_PATH=$(find android/app/build/outputs/apk/debug -name "*.apk" | head -n 1)
+        if [ -f "$APK_PATH" ]; then
+          echo "APK found: $APK_PATH"
+          echo "APK size: $(du -h "$APK_PATH" | cut -f1)"
+          # Use aapt to verify APK details
+          $ANDROID_HOME/build-tools/*/aapt dump badging "$APK_PATH" | grep -E "package:|sdkVersion:|targetSdkVersion:"
+        else
+          echo "ERROR: APK not found!"
+          exit 1
+        fi
+      continue-on-error: false
+    
     - name: Upload Debug APK
       uses: actions/upload-artifact@v4
       with:
