--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -101,7 +101,7 @@ jobs:
           echo "ERROR: APK not found!"
           exit 1
         fi
-      continue-on-error: false
+      continue-on-error: true
     
     - name: Upload Debug APK
       uses: actions/upload-artifact@v4
