--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -88,20 +88,6 @@ jobs:
         find android -type f -name "*.apk" -exec ls -lh {} \;
       continue-on-error: true
     
-    - name: Verify APK
-      run: |
-        echo "=== Verifying APK ==="
-        APK_PATH=$(find android/app/build/outputs/apk/debug -name "*.apk" | head -n 1)
-        if [ -f "$APK_PATH" ]; then
-          echo "APK found: $APK_PATH"
-          echo "APK size: $(du -h "$APK_PATH" | cut -f1)"
-          # Use aapt to verify APK details
-          $ANDROID_HOME/build-tools/*/aapt dump badging "$APK_PATH" | grep -E "package:|sdkVersion:|targetSdkVersion:"
-        else
-          echo "ERROR: APK not found!"
-          exit 1
-        fi
-      continue-on-error: true
     
     - name: Upload Debug APK
       uses: actions/upload-artifact@v4
@@ -111,12 +97,22 @@ jobs:
         retention-days: 30
         if-no-files-found: warn
     
+    - name: Decode Keystore
+      if: startsWith(github.ref, 'refs/tags/')
+      run: |
+        echo "${{ secrets.ANDROID_KEYSTORE_BASE64 }}" | base64 --decode > android/app/release-key.jks
+
     - name: Build APK (Release) - On Tag
       if: startsWith(github.ref, 'refs/tags/')
       working-directory: android
       run: |
         chmod +x gradlew
         ./gradlew clean assembleRelease --no-daemon
+      env:
+        SIGNING_STORE_FILE: release-key.jks
+        SIGNING_STORE_PASSWORD: ${{ secrets.ANDROID_KEYSTORE_PASSWORD }}
+        SIGNING_KEY_ALIAS: ${{ secrets.ANDROID_KEY_ALIAS }}
+        SIGNING_KEY_PASSWORD: ${{ secrets.ANDROID_KEY_PASSWORD }}
       continue-on-error: true
     
     - name: Upload Release APK
