--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -34,13 +34,13 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '20'
-        cache: 'npm'
     
     - name: Clear npm cache
       run: npm cache clean --force
     
     - name: Install dependencies
       run: |
+        rm -rf node_modules
         rm -f package-lock.json
         npm install --legacy-peer-deps
     
