--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "panadería-costos-pro",
+  "name": "panaderia-costos-pro",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +7,25 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "build-apk": "npm run build && npx cap sync && cd android && gradlew assembleDebug"
+    "build-apk": "npm run build && npx cap sync && cd android && gradlew assembleDebug",
+    "electron:dev": "concurrently -k \"cross-env BROWSER=none npm run dev\" \"wait-on tcp:3000 && electron .\"",
+    "electron:build": "npm run build && electron-builder"
+  },
+  "main": "electron/main.js",
+  "build": {
+    "appId": "com.panaderiacostos.app",
+    "productName": "Panaderia Costos Pro",
+    "directories": {
+      "output": "release"
+    },
+    "files": [
+      "dist/**/*",
+      "electron/**/*",
+      "package.json"
+    ],
+    "win": {
+      "target": "nsis"
+    }
   },
   "dependencies": {
     "@capacitor/android": "^7.4.4",
@@ -21,12 +39,18 @@
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
+    "app-builder-bin": "^5.0.0-alpha.12",
     "autoprefixer": "^10.4.22",
+    "concurrently": "^9.2.1",
+    "cross-env": "^10.1.0",
+    "electron": "^39.2.6",
+    "electron-builder": "^26.0.12",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.8.2",
     "vite": "^6.2.0",
     "vite-plugin-pwa": "^1.2.0",
+    "wait-on": "^9.0.3",
     "workbox-window": "^7.4.0"
   }
 }
